# PyTorch-ONNX-TensorRT-CPP

./: .gitignore  CMakeLists.txt  README.md  export_to_onnx.py  gpu_preprocess_kernels.cu  gpu_preprocess_kernels.cuh  resnet50-trt.cpp  resnet_preprocessor.cu  resnet_preprocessor.cuh
.devcontainer/: devcontainer.json
